--- a/doc/dokumentacja/gpio.tex
+++ b/doc/dokumentacja/gpio.tex
@@ -1,2 +1,61 @@
 \subsection{Sterowanie GPIO}
+
+\subsubsection{Wstęp}
 System wykorzystuje piny GPIO mikrokontrolera do sterowania różnymi elementami wykonawczymi donicy. Funkcjonalność ta obejmuje konfigurację kierunku pinów (wejście/wyjście), ustawianie stanów logicznych oraz obsługę przerwań sprzętowych. GPIO jest wykorzystywane między innymi do sterowania diodami sygnalizacyjnymi, wykrywania poziomu wody oraz obsługi przycisków interfejsu użytkownika.
+
+\subsubsection{Konfiguracja portów GPIO}
+
+W systemie opartym o mikrokontroler LPC1768/9, obsługa pinów GPIO odbywa się dwuetapowo: najpierw należy przypisać pinowi odpowiednią funkcję, a następnie ustawić jego kierunek oraz zarządzać stanem logicznym.
+
+\paragraph{Funkcja pinu}
+
+Piny mikrokontrolera mogą pełnić różne role – od ogólnych wejść/wyjść (GPIO), przez interfejsy komunikacyjne (SPI, UART), aż po funkcje specjalne. Wybór funkcji dokonywany jest za pomocą rejestrów \texttt{PINSEL0} do \texttt{PINSEL9}, z których każdy kontroluje dwa bity odpowiadające konkretnemu pinowi:
+
+\begin{itemize}
+    \item \texttt{00} – GPIO (funkcja domyślna),
+    \item \texttt{01}, \texttt{10}, \texttt{11} – funkcje alternatywne (specyficzne dla każdego pinu).
+\end{itemize}
+
+Pełna lista funkcji alternatywnych znajduje się w dokumentacji mikrokontrolera (sekcja 8.5.1 dokumentu UM10360).
+
+\paragraph{Rejestry GPIO}
+
+Po przypisaniu pinu funkcji GPIO, konfiguracja odbywa się za pomocą zestawu rejestrów \texttt{FIOx}, gdzie \texttt{x} oznacza numer portu (od 0 do 4). Poniżej opis poszczególnych rejestrów:
+
+\begin{itemize}
+    \item \textbf{\texttt{FIOxDIR}} – \textit{Direction Register} (Rejestr kierunku):
+
+    Ten rejestr pozwala ustalić kierunek działania każdego pinu portu. 
+    \texttt{1} ustawia dany pin jako wyjście (output), natomiast \texttt{0} oznacza wejście (input). 
+
+
+    \item \textbf{\texttt{FIOxMASK}} – \textit{Mask Register} (Rejestr maski):
+
+    Maskowanie pozwala ignorować niektóre bity przy operacjach odczytu/zapisu. 
+    Bity ustawione na \texttt{1} są pomijane przez funkcje korzystające z \texttt{FIOxSET}, \texttt{FIOxCLR} i \texttt{FIOxPIN}. 
+    Ustawienie bitu na \texttt{0} oznacza, że operacje na danym pinie są aktywne.
+
+
+    \item \textbf{\texttt{FIOxPIN}} – \textit{Pin Value Register} (Rejestr stanu pinów):
+
+    Ten rejestr służy zarówno do odczytu, jak i zapisu. 
+    Odczyt zwraca aktualny stan logiczny wszystkich pinów danego portu, natomiast zapis nadpisuje piny wyjściowe wartościami logicznymi (jeśli są skonfigurowane jako output).
+
+
+    \item \textbf{\texttt{FIOxSET}} – \textit{Set Register} (Rejestr ustawień):
+
+    Rejestr służy do ustawiania wybranych pinów wyjściowych na stan wysoki (\texttt{logic 1}). 
+    Każdy bit ustawiony na \texttt{1} wymusza stan wysoki na odpowiadającym mu pinie. 
+    Ustawienie bitu na \texttt{0} nie zmienia niczego. Nie działa na pinach wejściowych.
+
+
+    \item \textbf{\texttt{FIOxCLR}} – \textit{Clear Register} (Rejestr zerowania):
+
+    Rejestr ten jest odwrotnością \texttt{FIOxSET}. Pozwala ustawić konkretne piny wyjściowe na stan niski (\texttt{logic 0}). 
+    Podobnie jak wcześniej, ustawienie \texttt{1} na wybranym bicie spowoduje wyczyszczenie (ustawienie stanu niskiego) danego pinu. 
+    Nie wpływa na piny wejściowe.
+
+\end{itemize}
+
+
+
