--- a/doc/dokumentacja/dokumentacja.tex
+++ b/doc/dokumentacja/dokumentacja.tex
@@ -8,7 +8,7 @@
 \usepackage{graphicx}
 \usepackage{siunitx}
 \usepackage{booktabs}
-
+\usepackage{gensymb}
 
 
 \title{Dokumentacja projektu: Inteligentna donica}
