--- a/doc/dokumentacja/pwm.tex
+++ b/doc/dokumentacja/pwm.tex
@@ -1,3 +1,34 @@
+
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstdefinestyle{customc}{
+  belowcaptionskip=1\baselineskip,
+  breaklines=true,
+  frame=L,
+  xleftmargin=\parindent,
+  language=C,
+  showstringspaces=false,
+  basicstyle=\footnotesize\ttfamily,
+  keywordstyle=\bfseries\color{green!40!black},
+  commentstyle=\itshape\color{purple!40!black},
+  identifierstyle=\color{blue},
+  stringstyle=\color{orange},
+}
+
+\lstdefinestyle{customasm}{
+  belowcaptionskip=1\baselineskip,
+  frame=L,
+  xleftmargin=\parindent,
+  language=[x86masm]Assembler,
+  basicstyle=\footnotesize\ttfamily,
+  commentstyle=\itshape\color{purple!40!black},
+}
+
+\lstset{escapechar=@,style=customc}
+
 \subsection{Modulacja szerokości impulsu (PWM)}
 Implementacja PWM umożliwia precyzyjne sterowanie elementami wykonawczymi wymagającymi sygnału analogowego, takimi jak silniki czy regulacja jasności diody LED. Funkcjonalność obejmuje konfigurację częstotliwości sygnału PWM, ustawianie wypełnienia impulsu (duty cycle) oraz dynamiczną zmianę parametrów w zależności od warunków środowiskowych. PWM jest wykorzystywane do regulacji intensywności świecenia diod LED w diodzie RGB LED3 [schemat]. %dodaj schemat
 W projekcie został wykorzystany PWM1.
@@ -38,13 +69,17 @@ W projekcie został wykorzystany PWM1.
             \item \textbf{Counter/Timer Mode} - bity 0:1, wartości i odpowiadające im działanie zostały opisane w poniższej tabeli.
             \begin{table}[H]
                 \centering
-                \begin{tabular}{|c|c|}
+                \begin{tabular}{|c|p{13cm}|}
                     \hline
+                    \rowcolor{gray!30}
                     Wartość & Opis\\
                     \hline
                     00  & Timer mode: Timer Counter (TC) wykorzystuje Prescale Counter (PC) oraz Prescale Register (PR), aby móc działać wolniej. TC inkrementuje się gdy PC = PR\\
+                    \hline
                     01 & Counter Mode: TC zlicza impulsy przychodzące (inkrementacja przy każdym zboczu narastającym) z zewnętrznego pinu wybranego na bitach 3:2  \\
+                    \hline
                     10 & Counter Mode: TC zlicza impulsy przychodzące (inkrementacja przy każdym zboczu opadającym) z zewnętrznego pinu wybranego na bitach 3:2  \\
+                    \hline
                     11 & Counter Mode: TC zlicza impulsy przychodzące (inkrementacja przy na obu zboczach impulsu) z zewnętrznego pinu wybranego na bitach 3:2  \\
                     \hline
                 \end{tabular}
@@ -53,13 +88,16 @@ W projekcie został wykorzystany PWM1.
             \item \textbf{Count Input Select} - bity 3:2 - ta częśćrejestru odpowiada za wybó pinu PCAP z którego będą zliczane impulsy.\\
             \begin{table}[H]
                 \centering
-                \begin{tabular}{|c|c|}
+                \begin{tabular}{|c|p{13cm}|}
                     \hline
                     Wartość & Opis\\
                     \hline
                     00  & Timer mode: Timer Counter (TC) wykorzystuje Prescale Counter (PC) oraz Prescale Register (PR), aby móc działać wolniej. TC inkrementuje się gdy PC = PR\\
+                    \hline
                     01 & Counter Mode: TC zlicza impulsy przychodzące (inkrementacja przy każdym zboczu narastającym) z zewnętrznego pinu wybranego na bitach 3:2  \\
+                    \hline
                     10 & Counter Mode: TC zlicza impulsy przychodzące (inkrementacja przy każdym zboczu opadającym) z zewnętrznego pinu wybranego na bitach 3:2  \\
+                    \hline
                     11 & Counter Mode: TC zlicza impulsy przychodzące (inkrementacja przy na obu zboczach impulsu) z zewnętrznego pinu wybranego na bitach 3:2  \\
                     \hline
                 \end{tabular}
@@ -93,12 +131,14 @@ W projekcie został wykorzystany PWM1.
                         Zatem bity ustawiające tryby pracy to 6:2.
                         \begin{table}[H]
                             \centering
-                            \begin{tabular}{|c|c|c|}
+                            \begin{tabular}{|c|c|p{10cm}|}
                                 \hline
+                                \rowcolor{gray!30}
                                 Wartość & Tryb & Opis\\
                                 \hline
-                                    0 & Single-edge & Generowany jest impuls z jedną krawędzią  opadającą \ref{fig:single-edge-left-pwm}, ponieważ z dokumentacji strona 520, wynika iż każdy cykl PWM zaczyna się od stanu wysokiego.\\
-                                    1 & Double-edge & Generowany jest impuls z dwiema (umożliwia symetryczne impulsy \ref{fig:double-edge-center-pwm})\\
+                                    0 & Single-edge & Generowany jest impuls z jedną \hyperref[fig:single-edge-left-pwm]{krawędzią opadającą}, ponieważ z \href{https://www.zsk.p.lodz.pl/~morawski/SCR&ES/NotyKatalogowe/UM10360.pdf#page=119&zoom=100,210,814}{dokumentacji (strona 520)}., wynika iż każdy cykl PWM zaczyna się od stanu wysokiego.\\
+                                \hline
+                                    1 & Double-edge & Generowany jest impuls z \hyperref[fig:double-edge-center-pwm]{dwiema krawędziami} (umożliwia symetryczne impulsy)\\
                                 \hline
                             \end{tabular}
                             \caption{Rodzaje pracy w trybie Timer/Counter}
@@ -141,7 +181,7 @@ W projekcie został wykorzystany PWM1.
     \end{enumerate}
 
     \item Omówienie zagadnienia PWM na podstawie sterowania diodą LED3. \\
-        LED3, to dioda RGB, skłądająca się z oddzielnych diod czerwonej, zielonej i niebieskiej (wspólny plus). Wykorzystanie PWM do pośredniego (sterujemy masą poprzez tranzystory \ref{fig:led3}) sterowania jasnością diod RGB umożliwia dostosowanie jasności poszczególnych kolorów w zależności od potrzeb.
+        LED3, to dioda RGB, skłądająca się z oddzielnych diod czerwonej, zielonej i niebieskiej (wspólny plus). Wykorzystanie PWM do pośredniego (sterujemy masą poprzez tranzystory \hyperref[fig:led3]{(schemat)}) sterowania jasnością diod RGB umożliwia dostosowanie jasności poszczególnych kolorów w zależności od potrzeb.
         \begin{figure}[H]
             \centering
             \includegraphics[width=0.8\textwidth]{../PWM/led3.jpg}
@@ -149,5 +189,37 @@ W projekcie został wykorzystany PWM1.
             \label{fig:led3}
         \end{figure}
         
+        Jasność diody jest skorelowana z szerokością impulsu. Ze względu na zapis szestnastkowy kolorów RGB (każdy kolor ma zakres 0-255), zdecydowaliśmy się na okres 255.
+        \begin{lstlisting}
+LPC_PWM1->PCR = (1 << 9) | (1 << 10) | (1 << 11);  // ustawiamy tryb PWM na single-edge
 
+LPC_PWM1->PR = 0;         // TC jest inkrementowany przy PR+1, wiec dzielnik zegara sie nie zmienia. 
+                          // Czestotliwosc wynosi 25 MHz / 1 = 25 MHz
+LPC_PWM1->MR0 = 255;      // Okres PWM = 255 cykli 
+LPC_PWM1->MCR = (1 << 1); // Reset na MR0 (PWM cycle)
+
+LPC_PWM1->MR1 = 255;      // Ustawiamy jasnosc na 100%, szerokosc impulsow = 255 / 255 = 100%
+LPC_PWM1->MR2 = 255;      
+LPC_PWM1->MR3 = 255; 
+
+LPC_PWM1->LER = (1 << 1) | (1 << 2) | (1 << 3) | (1 << 0); // Aktualizacja rejestrow MRx
+
+LPC_PWM1->TCR = (1 << 0) | (1 << 3);  // Wlaczamy PWM
+        \end{lstlisting}
+
+        Kolor LED3 ustawiamy przy pomocy funkcji $PWM_SetColor(uint8_t red, uint8_t green, uint8_t blue)$, która zmienia zawartość rejestrów MR1, MR2 i MR3.
+        
+        \begin{lstlisting}
+void PWM_SetColor(uint8_t red, uint8_t green, uint8_t blue) {
+    if( red < 0 || red > 255 ) return; // ograniczenie zakresu
+    if( green < 0 || green > 255 ) return;
+    if( blue < 0 || red > 255 ) return;
+
+    LPC_PWM1->MR1 = red; // ustawiamy szerokosc impulsu dla diody czerwonej
+    LPC_PWM1->MR2 = blue; // ustawiamy szerokosc impulsu dla diody niebieskiej
+    LPC_PWM1->MR3 = green; // ustawiamy szerokosc impulsu dla diody zielonej
+
+    LPC_PWM1->LER = (1 << 1) | (1 << 2) | (1 << 3);  // zaktualizuj MR1-MR3
+}
+        \end{lstlisting}
 \end{enumerate}
