--- a/doc/dokumentacja/dokumentacja.tex
+++ b/doc/dokumentacja/dokumentacja.tex
@@ -58,13 +58,23 @@
 |%zrobic ladniejsza
 \begin{table}[H]
     \centering
-    \begin{tabular}{|c|c|}
+    \begin{tabular}{|c|c|c|}
     \hline
-    członek zespołu & funkcjonalność\\
+    Funkcjonalność & Realizacja & Członek zespołu\\
     \hline
-    Olek & i2c, light, pwm, adc\\    %zrobione: i2c, light, pwm, adc
-    Malwina & gpio, audio, timer\\
-    Julka & SPI, oled, czujnik temperatury\\
+    I2C & Zrealizowane & Aleksander Kaźmierczak \\
+    Czujnik światła & Zrealizowane & Aleksander Kaźmierczak \\
+    PWM & Zrealizowane & Aleksander Kaźmierczak \\
+    ADC (czujnik wilgotności) & Zrealizowane & Aleksander Kaźmierczak \\
+    \hline
+    GPIO & Zrealizowane & Malwina Wodnicka \\
+    Obsługa głośnika & Zrealizowane & Malwina Wodnicka \\
+    Timer & Zrealizowane & Malwina Wodnicka \\
+    \hline
+    SPI & Zrealizowano & Julia Dobroszek \\
+    OLED & Zrealizowano & Julia Dobroszek \\
+    Obsługa termometru & Zrealizowano & Julia Dobroszek \\
+    
     \hline
     \end{tabular}
     \caption{Zawartość zespołu}
